--- a/src/assets/scss/templates/sections/testimonials.scss
+++ b/src/assets/scss/templates/sections/testimonials.scss
@@ -8,7 +8,7 @@
     width: 300px;
     height: 300px;
     transform-style: preserve-3d;
-    perspective: 500px;
+    perspective: 800px;
     border: none;
     background-color: inherit;
 
@@ -26,14 +26,13 @@
       width: 100%;
       height: 100%;
       overflow: hidden;
-      box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
+      box-shadow: $card-red-shadow;
       border-radius: 15px;
-      background: rgba(255, 255, 255, 0.06);
+      background: $card-dark-transparent;
       transform-style: preserve-3d;
-      transition: 0.5s;
+      transition: 0.8s;
       backface-visibility: hidden;
-      border-top: 1px solid #ddd;
-      border-left: 1px solid #ddd;
+      border: $white-500-solid;
 
       &.front-face {
         @include flex-column();
@@ -45,6 +44,7 @@
           height: 150px;
           border-radius: 50%;
           object-fit: cover;
+          object-position: center top;
         }
 
         .name {
@@ -53,36 +53,31 @@
 
         .designation {
           font-size: 0.8rem;
-          color: #ddd;
+          color: $white-500;
           letter-spacing: 0.8px;
         }
       }
 
       &.back-face {
         position: absolute;
-        background: rgba(255, 255, 255, 0.06);
         transform: rotateY(180deg);
         padding: 20px 30px;
         text-align: center;
-        vertical-align: middle;
-        user-select: none;
+        // user-select: none;
         @include flex-column();
+        align-items: center;
+        justify-content: center;
+        row-gap: 20px;
 
         .bi-quote-left {
-          position: absolute;
-          top: 25px;
-          left: 25px;
+          display: block;
+          align-self: flex-start;
           font-size: 1.2rem;
         }
 
-        .testimonial {
-          flex: 1;
-        }
-
         .bi-quote-right {
-          position: absolute;
-          bottom: 35px;
-          right: 25px;
+          display: block;
+          align-self: flex-end;
           font-size: 1.2rem;
         }
       }
@@ -96,99 +91,3 @@
     margin-bottom: 20px;
   }
 }
-
-// .container .col-lg-4 {
-//   display: flex;
-//   justify-content: center;
-// }
-
-// .card {
-//   width: 300px;
-//   height: 300px;
-//   transform-style: preserve-3d;
-//   perspective: 500px;
-//   border: none;
-//   background-color: inherit;
-// }
-
-// .card .face {
-//   position: absolute;
-//   color: #fff;
-//   width: 100%;
-//   height: 100%;
-//   overflow: hidden;
-//   box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
-//   border-radius: 15px;
-//   background: rgba(255, 255, 255, 0.06);
-//   transform-style: preserve-3d;
-//   transition: 0.5s;
-//   backface-visibility: hidden;
-//   border-top: 1px solid #ddd;
-//   border-left: 1px solid #ddd;
-//   /* border-right: 1px solid #999;
-// border-bottom: 1px solid #999; */
-// }
-
-// .card .face.front-face,
-// .card .face.back-face {
-//   position: absolute;
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-//   justify-content: center;
-// }
-
-// .card .face.front-face .profile {
-//   width: 150px;
-//   height: 150px;
-//   border-radius: 50%;
-//   object-fit: cover;
-// }
-
-// .card .face.front-face .name {
-//   letter-spacing: 2px;
-// }
-
-// .card .face.front-face .designation {
-//   font-size: 0.8rem;
-//   color: #ddd;
-//   letter-spacing: 0.8px;
-// }
-
-// .card:hover .face.front-face {
-//   transform: rotateY(180deg);
-// }
-
-// .card .face.back-face {
-//   position: absolute;
-//   background: rgba(255, 255, 255, 0.06);
-//   transform: rotateY(180deg);
-//   padding: 20px 30px;
-//   text-align: center;
-//   user-select: none;
-// }
-
-// .card .face.back-face .fa-quote-left {
-//   position: absolute;
-//   top: 25px;
-//   left: 25px;
-//   font-size: 1.2rem;
-// }
-
-// .card .face.back-face .fa-quote-right {
-//   position: absolute;
-//   bottom: 35px;
-//   right: 25px;
-//   font-size: 1.2rem;
-// }
-
-// .card:hover .face.back-face {
-//   transform: rotateY(360deg);
-// }
-
-// @media (max-width: 991.5px) {
-//   .col-lg-4 {
-//     margin-top: 40px;
-//     margin-bottom: 20px;
-//   }
-// }
